2021-10-23 1)스프링 부트 oauth

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
     username: root
     password: admin@123
     
+
   jpa:
     open-in-view: true
     hibernate:
@@ -34,5 +35,8 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+
+cos:
+  key: cos1234
       
   
